@@ -39,9 +39,9 @@ import ews.config as config
 class StatusBubble(View):
     # These queue names are from shortname in https://trac.webkit.org/browser/webkit/trunk/Tools/BuildSlaveSupport/ews-build/config.json
     # FIXME: Auto-generate this list https://bugs.webkit.org/show_bug.cgi?id=195640
-    ALL_QUEUES = ['ios', 'gtk', 'wpe', 'api-ios', 'api-mac', 'bindings', 'ios-sim', 'ios-wk2', 'jsc', 'mac', 'mac-32bit', 'mac-32bit-wk2',
-                    'mac-debug', 'mac-debug-wk1', 'mac-wk1', 'mac-wk2', 'style', 'webkitperl', 'webkitpy', 'win', 'wincairo']
-    ENABLED_QUEUES = ['ios', 'gtk', 'wpe', 'api-ios', 'api-mac', 'bindings', 'webkitperl', 'webkitpy']
+    ALL_QUEUES = ['ios', 'gtk', 'wpe', 'wincairo', 'api-ios', 'api-mac', 'bindings', 'ios-sim', 'ios-wk2', 'jsc', 'mac', 'mac-32bit', 'mac-32bit-wk2',
+                    'mac-debug', 'mac-debug-wk1', 'mac-wk1', 'mac-wk2', 'style', 'webkitperl', 'webkitpy', 'win']
+    ENABLED_QUEUES = ['ios', 'gtk', 'wpe', 'wincairo', 'api-ios', 'api-mac', 'bindings', 'webkitperl', 'webkitpy']
     # FIXME: Auto-generate the queue's trigger relationship
     QUEUE_TRIGGERS = {
         'api-ios': 'ios-sim',
