@@ -1,5 +1,17 @@
 2019-07-12  Aakash Jain  <aakash_jain@apple.com>
 
+        [ews-build] Enable wincairo queue on new EWS
+        https://bugs.webkit.org/show_bug.cgi?id=199593
+
+        Reviewed by Don Olmstead.
+
+        * BuildSlaveSupport/ews-build/config.json: Enabled the triggers for wincairo builder.
+        * BuildSlaveSupport/ews-build/factories.py: Added required build steps for wincairo factory.
+        * BuildSlaveSupport/ews-app/ews/views/statusbubble.py:
+        (StatusBubble): Enable wincairo status-bubble.
+
+2019-07-12  Aakash Jain  <aakash_jain@apple.com>
+
         [ews-app] Enable logging for clicking SubmitToEWS button
         https://bugs.webkit.org/show_bug.cgi?id=199757
 
